Enhance security, validation, and error handling across frontend and backend
Co-authored-by: sohanfernando7 <sohanfernando7@gmail.com>