@@ -3,6 +3,8 @@ package com.example.moviewebsite.service.impl;
 import com.example.moviewebsite.controller.request.CreateUserRequestDTO;
 import com.example.moviewebsite.controller.request.LoginUserRequestDTO;
 import com.example.moviewebsite.controller.response.GetUserResponseDTO;
+import com.example.moviewebsite.exception.InvalidCredentialsException;
+import com.example.moviewebsite.exception.UserNotFoundException;
 import com.example.moviewebsite.model.User;
 import com.example.moviewebsite.repository.UserRepository;
 import com.example.moviewebsite.service.UserService;
@@ -12,6 +14,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -21,69 +24,73 @@ public class UserServiceImpl implements UserService {
     private PasswordEncoder passwordEncoder;
 
     @Override
-    public GetUserResponseDTO register(CreateUserRequestDTO createUserRequest){
+    public GetUserResponseDTO register(CreateUserRequestDTO createUserRequest) {
+        // Check if user already exists
+        if (userRepository.findByEmail(createUserRequest.getEmail()).isPresent()) {
+            throw new IllegalArgumentException("User with this email already exists");
+        }
+        
         User user = new User();
-
         user.setName(createUserRequest.getName());
         user.setEmail(createUserRequest.getEmail());
         user.setPassword(passwordEncoder.encode(createUserRequest.getPassword()));
 
-        userRepository.save(user);
+        User savedUser = userRepository.save(user);
 
         return new GetUserResponseDTO(
-                user.getId(),
-                user.getName(),
-                user.getEmail()
+                savedUser.getId(),
+                savedUser.getName(),
+                savedUser.getEmail()
         );
     }
 
     @Override
     public GetUserResponseDTO login(LoginUserRequestDTO loginUserRequestDTO) {
-        Optional<User> user = userRepository.findByEmail(loginUserRequestDTO.getEmail());
+        Optional<User> userOptional = userRepository.findByEmail(loginUserRequestDTO.getEmail());
 
-        if (user.isPresent()) {
-            User foundUser = user.get();
-            if (passwordEncoder.matches(loginUserRequestDTO.getPassword(), foundUser.getPassword())) {
-                return new GetUserResponseDTO(
-                        foundUser.getId(),
-                        foundUser.getName(),
-                        foundUser.getEmail()
-                );
-            } else {
-                throw new RuntimeException("Invalid email or password.");
-            }
-        } else {
-            throw new RuntimeException("Invalid email or password.");
+        if (userOptional.isEmpty()) {
+            throw new InvalidCredentialsException("Invalid email or password");
         }
+        
+        User foundUser = userOptional.get();
+        if (!passwordEncoder.matches(loginUserRequestDTO.getPassword(), foundUser.getPassword())) {
+            throw new InvalidCredentialsException("Invalid email or password");
+        }
+        
+        return new GetUserResponseDTO(
+                foundUser.getId(),
+                foundUser.getName(),
+                foundUser.getEmail()
+        );
     }
 
     @Override
     public List<GetUserResponseDTO> getAllUsers() {
-        List<User> users = userRepository.findAll();
-        return users.stream().map(user -> {
-            GetUserResponseDTO userResponse = new GetUserResponseDTO();
-            userResponse.setId(user.getId());
-            userResponse.setName(user.getName());
-            userResponse.setEmail(user.getEmail());
-            return userResponse;
-        }).toList();
+        return userRepository.findAll().stream()
+                .map(user -> new GetUserResponseDTO(
+                        user.getId(),
+                        user.getName(),
+                        user.getEmail()))
+                .collect(Collectors.toList());
     }
 
     @Override
     public GetUserResponseDTO findUserById(Long id) {
-        User user = userRepository.findById((id))
-                .orElseThrow(() -> new RuntimeException("User not found with id: " + id));
-
+        User user = userRepository.findById(id)
+                .orElseThrow(() -> new UserNotFoundException("User with ID " + id + " not found"));
+        
         return new GetUserResponseDTO(
                 user.getId(),
                 user.getName(),
                 user.getEmail()
         );
-
     }
 
     @Override
     public void deleteUser(Long id) {
+        if (!userRepository.existsById(id)) {
+            throw new UserNotFoundException("User with ID " + id + " not found");
+        }
         userRepository.deleteById(id);
     }
 }
